compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__dead_code_detection__imported_module_alias_only_referenced_by_unused_function_with_unqualified.snap
---
source: compiler-core/src/type_/tests/dead_code_detection.rs
expression: "\nimport wibble.{type Wibble} as wobble\n\nfn unused() {\n  wobble.Wibble\n}\n\npub fn main() -> Wibble {\n  panic\n}\n"
---
----- SOURCE CODE
-- wibble.gleam

pub type Wibble {
  Wibble(Int)
}


-- main.gleam

import wibble.{type Wibble} as wobble

fn unused() {
  wobble.Wibble
}

pub fn main() -> Wibble {
  panic
}


----- WARNING
warning: Unused imported module alias
  ┌─ /src/warning/wrn.gleam:2:29
  │
2 │ import wibble.{type Wibble} as wobble
  │                             ^^^^^^^^^ This alias is never used

Hint: You can safely remove it.

    import wibble as _


warning: Unused private function
  ┌─ /src/warning/wrn.gleam:4:1
  │
4 │ fn unused() {
  │ ^^^^^^^^^^^ This private function is never used

Hint: You can safely remove it.
